hphp/hack/test/typecheck/function_pointer/bad_syntax3.php.exp
File "bad_syntax3.php", line 10, characters 8-15:
Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. (Parsing[1002])
