hphp/hack/test/typecheck/function_pointer/bad_syntax3.php
<?hh

final class Foo {
  public static function bar(int $x): void {}
}

function adze(): void {
  $y = new Foo();
  $z = 'bar';
  $x = $y::$z<>;
  $x(4);
}
